data-title is now used in the H1

--- a/jenkins_build_status.html
+++ b/jenkins_build_status.html
@@ -1,5 +1,5 @@
 <div class="build-failed">
-	<h1 class="title">Jenkins FAILED</h1>
+	<h1 class="jenkins-status"><span data-bind="title"></span> FAILED</h1>
 	<ul class="list-nostyle list-failed">
 	  <li data-foreach-item="failedJobs">
 	    <div class="label" data-bind="item.label"></div>
@@ -9,7 +9,7 @@
 </div>
 
 <div class="build-succeeded">
-	<h1 class="title">All Jenkins builds are successful</h1>
+	<h1 class="jenkins-status">All <span data-bind="title"></span> builds are successful</h1>
 	<i class="fa fa-thumbs-o-up"></i>
 </div>
 
